2013-06-20 Miguel de Dios <miguel.dedios@artica.es>

	* include/graphs/pChart/pPie.class.php, include/graphs/fgraph.php:
	fixed the htmlentities in the pie chart legend, the border was
	fixed for older commits.
	
	MERGED FROM THE BRANCH PANDORA_4.0

2013-06-20  Junichi Satoh  <junichi@rworks.jp>

	* include/help/ja/help_alerts_config.php: Added a new help.

2013-06-19 Mario Pulido <mario.pulido@artica.es>	

	*godmode/alerts/alert_list.php,
	godmode/alerts/configure_alert_template.php,
	godmode/alerts/alert_templates.php,
	godmode/alerts/configure_alert_action.php,
	godmode/alerts/configure_alert_command.php,
	godmode/alerts/alert_actions.php,
	godmode/alerts/alert_commands.php,
	include/help/en/help_event_alert.php,
	include/help/en/help_alerts_config.php,
	include/help/es/help_event_alert.php,
	include/help/es/help_alerts_config.php,
	include/help/ja/help_event_alert.php,
	images/help/alert01.png,
	images/help/alert02.png,
	images/help/alert03.png,
	images/help/alert04.png,
	images/help/alert05.png,
	images/help/alert06.png,
	images/help/alert07.png,
	images/help/alert08.png,
	images/help/alert09.png,
	images/help/event01.png,
	images/help/event02.png,
	images/help/event03.png,
	images/help/event04.png,
	images/help/alert10.png,
	images/help/alert11.png,
	images/help/alert12.png,
	images/help/alert13.png,
	images/help/alert14.png,
	images/help/alert15.png,
	images/help/alert16.png: Added new helps

2013-06-18 Miguel de Dios <miguel.dedios@artica.es>

	* operation/menu.php: showed the message entry in workspace menu for
	all users.
	
	* include/functions_groups.php: added filters into the function
	"groups_get_users" for to avoid to get user without perms.
	
	* operation/messages/message_edit.php: fixed the ACL for to
	destination users.
	
	MERGED FROM THE BRANCH PANDORA_4.0

2013-06-18  Ramon Novoa  <rnovoa@artica.es>

	* include/functions.php: Fixed a warning.

2013-06-18 Miguel de Dios <miguel.dedios@artica.es>

	* operation/incidents/incident.php,