@@ -159,7 +159,7 @@ if (isset($config['netflow_disable_custom_lvfilters'])) {
 	$netflow_disable_custom_lvfilters = $config['netflow_disable_custom_lvfilters'];
 }
 
-open_meta_frame();
+enterprise_hook('open_meta_frame');
 
 echo '<form method="post" action="' . $config['homeurl'] . 'index.php?sec=netf&sec2=operation/netflow/nf_live_view&pure='.$pure.'">';
 	echo "<table class='databox' width='99%'>";
@@ -381,7 +381,7 @@ if ($draw != '') {
 		$max_aggregates, $connection_name);
 }
 
-close_meta_frame();
+enterprise_hook('close_meta_frame');
 
 ui_require_jquery_file ("ui-timepicker-addon");
 ?>
